--- a/styles/style.css
+++ b/styles/style.css
@@ -12,11 +12,15 @@
 .google-logo{
     height: 290px;
     display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .search-bar{
-    height: 140px;
-    display: flex;
+    max-height: 160px;
+    padding: 20px;
+    flex-shrink: 0;
+    box-sizing: border-box;
 }
 
 .languages{
@@ -27,4 +31,64 @@
 .footer{
     height: 94;
     display: flex;
+}
+
+.search-container{
+    width: auto;
+    max-width: 584px;
+    position: relative;
+    margin: 0 auto;
+    padding-top: 6px;
+}
+
+.input-container{
+    display:flex;
+    border: 1px solid #dfe1e5;
+    border-radius: 24px;
+    margin: 0 auto;
+    z-index: 3;
+    height: 44px;
+    width: auto;
+    max-width: 584px;
+}
+
+.input-box{
+    height:39px;
+    width: 487px;
+    display:flex;
+    flex: 1;
+    padding: 5px 8px 0 16px;
+}
+input{
+    height: 34px;
+    width: 487px;
+    display: flex;
+    flex: 100%;
+    border: none;
+    outline: none;
+    margin: 0;
+    padding: 0;
+    flex: 100%;
+    font-size: 16px;
+
+}
+
+.looking-glass{
+    display: flex;
+    align-items: center;
+    padding-right: 13px;
+    margin-top: -5px;
+    opacity: 0.3;
+
+}
+.type{
+    height: 39px;
+    width: 487px;
+}
+.mic{
+    display: flex;
+    flex: 0 0 auto;
+    margin-top: -5px;
+    align-items: stretch;
+    flex-direction: row;
 }
