--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,8 @@
 .header{
     height: 60px;
     display: flex;
+    flex-shrink: 0;
+    box-sizing: border-box;
 }
 
 .google-logo{
@@ -24,13 +26,20 @@
 }
 
 .languages{
-    height: 379;
-    display: flex;
+    height: 379px;
+    font-size: small;
+    margin-bottom: 24px;
+    text-align: center;
+    justify-content:center;
+    align-items: flex-start;
+    
 }
 
 .footer{
-    height: 94;
-    display: flex;
+    height: 94px;
+    background: #f2f2f2;
+    box-sizing: border-box;
+    
 }
 
 .search-container{
@@ -91,4 +100,138 @@ input{
     margin-top: -5px;
     align-items: stretch;
     flex-direction: row;
+}
+
+.button-container{
+    height: 70px;
+    padding-top: 18px;
+    top: 53px;
+    z-index: 0;
+    display: flex;
+    justify-content: center;
+}
+
+
+.search, .lucky{
+    height: 36px;
+    width: 127.41;
+    text-align: center;
+    border-radius: 4px;
+    border: 1px solid #f8f9fa;
+    background-color: #f8f9fa; 
+    margin: 11px 4px;
+    padding: 0 16px;
+
+    color: #3c4043;
+    font-size: 14px;
+    font-family: arial,sans-serif;
+}
+.search:hover,.lucky:hover{
+    box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
+    background-color: #f8f9fa;
+    border: 1px solid #dadce0;
+    color: #202124;
+}
+.offered-in{
+    display: inline-block;
+    line-height: 28px;
+    height: 28px;
+    width:468.02px;
+}
+
+a{
+    padding: 0 3px;
+    text-decoration: none;
+    width: 37.73px;
+    height: 15px;
+}
+.country{
+    padding: 15px 30px;
+    border-bottom: 1px solid #dadce0;
+    font-family: arial,sans-serif;
+    font-size: 15px;
+    color: rgba(0,0,0,.54);
+}
+
+.details{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0 20px;
+}
+
+.about{
+    height: 46px;
+    width: 393.38px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.privacy{
+    height: 46px;
+    width: 224.63px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.block{
+    display: block;
+    padding:15px;
+    white-space: nowrap;
+}
+
+.footer a{
+    color: #70757a;
+    font-size: 14px;
+    font-family: arial,sans-serif;
+}
+
+.setting{
+    position: relative;
+}
+.setting button{
+    text-align: left;
+    color: #70757a;
+    width: 100%;
+    border: none;
+    font-size: 14px;
+    font-family: arial,sans-serif;
+}
+
+.outer-header{
+    display:inline-block;
+    flex-grow: 1;
+}
+
+.inner-header{
+    min-width: auto;
+    font: 13px/27px Roboto,RobotoDraft,Arial,sans-serif;
+    z-index: 986;
+    height: 48px;
+    color: black;
+    position: relative;
+    transition: box-shadow 250ms;
+}
+
+.app-container{
+
+    float: right;
+    box-sizing: border-box;
+    height: 48px;
+    line-height: normal;
+    padding: 0 4px 0 32px;
+    flex: 0 0 auto;
+    justify-content: flex-end;
+    vertical-align: middle;
+    white-space: nowrap;
+    align-items: center;
+}
+
+.profile{
+    height: 4px;
+    width: 40px;
+    border-radius: 50%;
+    background-color: purple;
 }
